tests/test_files/invalid/syntax/struct_invalid_attribute_name.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Struct Location
    5123123not_an_identifier: string 
End
